Create event listener when user click on Submit button and table

--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>Pixel Art Maker!</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Monoton">
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <h1>Pixel Art Maker</h1>
 
@@ -14,7 +16,8 @@
         <input type="number" id="inputHeight" name="height" min="1" value="1">
         Grid Width:
         <input type="number" id="inputWidth" name="width" min="1" value="1">
-        <input type="submit">
+        <input type="submit" value="Refresh">
+        <p>Submit</p>
     </form>
 
     <h2>Pick A Color</h2>
@@ -25,4 +28,5 @@
 
     <script src="designs.js"></script>
 </body>
+
 </html>
